# blocktrix

./: .gitignore  CLAUDE.md  README.md  blocktrix_solver.cpp  blocktrix_solver.hpp  bthomas_solver.cpp  bthomas_solver.hpp  clean.sh  format.sh  install.sh  pyproject.toml  test_blocktrix.cpp
.github/workflows/: publish-package.yml  test-package.yml
blocktrix/: __init__.py  solver.py  solver_bcyclic.py  solver_thomas.py  utils.py
examples/: README.md
examples/quickstart/: README.md  quickstart.py
examples/timing/: README.md  mesa-timing.txt  plot.py  sbatch_rusty.sh  sbatch_rusty_cpu.sh  sbatch_rusty_gpu.sh  timing.py
scripts/: setup_rusty_venv.sh
tests/: test_solver.py
